codes_ch5/0_out.txt
  File "0.py", line 4
    print 'Hello World'
                      ^
SyntaxError: Missing parentheses in call to 'print'

